<resources>
    <string name="app_name">WorkFromHome</string>
    <string name="newTrabajoTitulo">Crear trabajo</string>
    <string name="descripcionLabel">Descripcion:</string>
    <string name="horasLabel">Horas presupuestadas:</string>
    <string name="categoriaLabel">Categoria:</string>
    <string name="precioLabel">Precio por hora:</string>
    <string name="monedaLabel">Moneda:</string>
    <string name="fechaLabel">Fecha limite:</string>
    <string name="inglesCheck">En Ingles</string>
    <string name="ingresarLabel">Guardar</string>
    <string-array name="monedas">
        <item>Pesos ARS</item>
        <item>Reales</item>
        <item>Euros</item>
        <item>Libras Esterlinas</item>
        <item>Dólares</item>
    </string-array>

    <!-- Menus -->
    <string name="contextTitle">Acciones</string>
    <string name="context1">Postularese a esta oferta</string>
    <string name="context2">Compartir esta oferta</string>
</resources>
